# Newspaper-Delivery-AI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: agent.py  config.py  llm.py  main.py  schemas.py  tools.py
scripts/: smoke_test.py  test_agent.py
