[project]
name = "newspaper-delivery-ai-agent"
version = "0.1.0"
description = "FastAPI service exposing a LangChain agent that summarizes recent news via Tavily Search."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
